Sending JSON to web page

--- a/flask/templates/analysis.html
+++ b/flask/templates/analysis.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <h1>Analysis</h1>
-        <h2>{{ score }}</h2><br>
-        <h2>{{ ratio }}</h2><br>
+        <h2>{{ points }}</h2><br>
+        <h2>{{ information }}</h2><br>
         <h2>{{ num_comments }}</h2><br>
         <h2>{{ timestamp_update }}</h2><br>
     </body>
