Added auto stop on API calls for stale reddit posts

--- a/flask/templates/analysis.html
+++ b/flask/templates/analysis.html
@@ -4,8 +4,8 @@
     <head>
         <title>Reddata - Input a reddit URL!</title>
         <script type="text/javascript">
-        var information = '{{information|safe}}';
-        var points = '{{points|safe}}';
+        var information = {{information|safe}};
+        var points = {{points|safe}};
         console.log(information);
         console.log(points);
         </script>
