Added frontend and chart display to web app

--- a/flask/templates/analysis.html
+++ b/flask/templates/analysis.html
@@ -4,10 +4,10 @@
     <head>
         <title>Reddata - Input a reddit URL!</title>
         <script type="text/javascript">
-        var information = {{information|safe}};
-        var points = {{points|safe}};
-        console.log(information);
-        console.log(points);
+        //var information = {{information|safe}};
+        //var points = {{points|safe}};
+        //console.log(information);
+        //console.log(points);
         </script>
     </head>
     <body>
