--- a/flask/templates/results.html
+++ b/flask/templates/results.html
@@ -135,6 +135,8 @@
             </div>
             <div class="col-md-4">
             <h6>Subreddit: <script> document.write(sub)</script></h6>
+            <div> 
+            </div>
                     <canvas id="myChart3" width="100" height="100" class="container content-canvas text-center"></canvas>
                     <script src="http://localhost:5000/static/dist/Chart.js">
                     </script>
